--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,22 @@ dependencies:
     sdk: flutter
 
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+
   cupertino_icons: ^0.1.3
+  firebase_auth:
+  curved_navigation_bar:
+  google_sign_in:
+  flutter_bloc:
+  equatable:
+  meta:
+  rxdart:
+  flutter_auth_buttons:
+  http:
+  frideos:
+
+  decimal:
+    
+
 
 dev_dependencies:
   flutter_test:
@@ -44,33 +57,34 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  assets:
+    - assets/
+    - img/pierna2.jpg
+    - img/pesas.jpg
+    - img/cinta.jpg
+    - img/cinta2.jpg
+    - img/abdomen2.jpg
+    - img/peso.jpg
+    - img/pierna2.jpg
+    - img/gluteos.jpg
+    - img/gluteos2.jpg
+    - img/pierna.jpg
+    - img/barra2.jpg
+    - img/rusa.jpg
+    - img/pierna3.jpg
+    - img/cinta2.jpg
+    - img/peso2.jpg
+    - img/mancuernas.jpg
+    - img/estiramiento.jpg
+    - img/gluteos.jpg
+    - img/barra.jpg
+    - img/pierna5.png
+    - img/pesas.png
+    - img/otro.png
+    - img/otro1.png
+    - img/Usuario.png
+    - img/mejoralimentos.jpg
+    - img/Premiun.jpeg
+    - img/healtrutine.png
+    - img/premiun2.png
+    - assets/images/
